WIP: #66: Fixed playlist-tool left alignment

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -860,6 +860,10 @@
 		display: none;
 	}
 
+	#playlist-tools {
+		left: .5em;
+	}
+
 	#playlistPanel > ul {
 		margin-bottom: 7em;
 	}
